2009-06-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/tests/mask.sh: Add a test for applying a mask image
	with -mask.

2009-06-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GenerateEXIFAttribute): Identify unknown
	tags via their four-character hex value.

	* magick/colorspace.c (CMYKToRGBTransform): Use symbolic notation
	to access pixel quantum values.

	* utilities/tests/identify.sh: Added a test for 'identify
	-verbose' on a well-populated JPEG file.

	* PerlMagick/t/{jpeg/write.t, jng/read.t, jng/write.t}: Relax
	allowed error for JPEG-related tests.

	* magick/attribute.c (GenerateEXIFAttribute): Attribute allocation
	size was too small causing overrun of memory buffer.  Problem was
	added on 2009-06-08.

	* magick/image.c (AllocateDepthMap): Allocation size was one
	element too small.
	(GetImageDepth): Forgot to free depth map.  Memory leak of 64K
	bytes per iteration.

2009-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/{mat.c, miff.c, pdf.c, ps3.c}: Have Zlib use our memory
	allocators.

	* magick/memory.c (MagickMallocCleared): New memory allocation
	interface which is similar to MagickMalloc() except that returned
	memory has been cleared first.

	* magick/hclut.c (HaldClutImagePixels): Fix wrong accesses
	detected by valgrind.  Also improve execution performance.

	* coders/xwd.c (WriteXWDImage): Fixed valgrind memcheck complaint
	about access to uninitialized data.

2009-06-09  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/txt.c Handle alpha channel for ImageMagick's alternative .txt

2009-06-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (WriteDPXImage): Fixed valgrind memcheck complaint
	about access to uninitialized data.

	* magick/attribute.c (GenerateEXIFAttribute): For EXIF STRING,
	output unprintable characters using three-digit octal notation.

	* coders/dpx.c (WriteDPXImage): Assure that offset count is
	correct according to reported bytes written.
